unpackaged/main/default/objects/Attendee_Scheduling_Event__e/Attendee_Scheduling_Event__e.object-meta.xml
<CustomObject>
    <label>Attendee Scheduling Event</label>
    <pluralLabel>Attendee Scheduling Events</pluralLabel>
</CustomObject>