unpackaged/main/default/objects/Attendee_Scheduling_Event__e/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <label>Course Code</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>