unpackaged/main/default/objects/Attendee_Scheduling_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>