unpackaged/main/default/objects/Attendee_Scheduling_Event__e/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>