unpackaged/main/default/objects/Attendee_Scheduling_Event__e/fields/Student_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_Email__c</fullName>
    <label>Student Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>